adicionei um paragrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum dignissimos, omnis voluptatem eos explicabo sunt, aliquid architecto repudiandae soluta vero dicta incidunt? Corporis nobis dicta vitae quos! Voluptate, unde pariatur!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, odit deleniti deserunt alias placeat quam nulla explicabo quidem, excepturi tenetur repellendus aspernatur id voluptas laboriosam. Velit, impedit! Molestiae, nobis accusamus!</p>
 </body>
 </html>
