correção.do.texto

--- a/atividades/index2.html
+++ b/atividades/index2.html
@@ -6,7 +6,7 @@
     <title>Treinando as atividades</title>
 </head>
 <body>
-    <H1>Olá, eu estou treinando tduo que aprendi na aula.</H1>
+    <H1>Olá, eu estou treinando tudo que aprendi na aula.</H1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam illo asperiores veritatis necessitatibus blanditiis, consequuntur voluptatibus sint amet. Dicta amet ad voluptates possimus praesentium corporis sed, officia ipsa quos optio.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, odit consequuntur commodi veritatis cum voluptates nesciunt nam repellendus. Inventore repellat perferendis harum saepe adipisci delectus similique nisi amet temporibus necessitatibus.</p>
